--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1345,11 +1345,13 @@ body>main>.add-btn {
 .korbo-trigger button {
     background: var(--primary);
     color: var(--white);
-    padding: 1rem 2rem;
+    padding: 0rem 2rem;
     border: none;
     border-radius: 0.5rem;
     cursor: pointer;
     font-size: 1.7rem;
+    display:flex;
+    align-items:center;
 }
 
 .korbo-trigger .bi {
