style: update form input styles to include select elements for consistent font usage

--- a/public/assets/css/krafto_cinergie.css
+++ b/public/assets/css/krafto_cinergie.css
@@ -65,7 +65,8 @@ iframe{
     margin:  0 0.5em;
 }
 
-input.form-control {
+input.form-control,
+select.form-select {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
 }
 
