refactor: remove HasSlug trait and update related views for consistency style: update font size and add warning alert styles fix: ensure required fields are validated in organization form update: rename 'Abstract' to 'Chapeau' in article views and forms

--- a/public/assets/css/krafto_cinergie.css
+++ b/public/assets/css/krafto_cinergie.css
@@ -1,7 +1,7 @@
+
 *{
     font-size:1.15rem;
 }
-
 .card-image-background{
      overflow:hidden;
      height:300px;
@@ -112,4 +112,8 @@ table.table tbody tr td:first-child a{
     content: '€';
     margin-left: 0.5rem;
     white-space: nowrap;
+}
+
+.alert.alert-warning {
+    color: black;
 }
