--- a/public/assets/wejune/css/style.css
+++ b/public/assets/wejune/css/style.css
@@ -746,6 +746,9 @@ span.prefix {
    position: relative;
    border-radius: 0 1rem 1rem 0;
    min-height: 450px;
+   background-image:url('/public/assets/img/gmaps.webp');
+   background-size: contain;
+   display:block;
 }
 
 #map {
