add responsive styles for embedVideo iframe dimensions

--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -816,6 +816,11 @@ div.embedVideo {
     padding: 1em 0;
 }
 
+.embedVideo iframe{
+    width:720px !important;
+    height:405px !important;
+}
+
 .sib-form {
     padding: 0;
 }
